tests/suite/fail/regression/fuzz/fuzz_garbage_25.ny
fn main() { let x = @25 } //~ ERROR
